--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>João Costa Fotografia</title>
 </head>
 
-<body>
+<body >
     <nav>
         <div class="logo"><img id="logo" src="imagens/logo2.png" alt="logo"></div>
 
@@ -59,7 +59,7 @@
 
         <div class="container-galeria" id="galeria">
             <h3>GALERIA</h3>
-            <a href="#">VER MAIS</a>
+            <a href="#galeria">VER MAIS</a>
         </div>
     </div>
 
