--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="fonts/fonts.css"> -->
+    <link rel="stylesheet" media="screen and (max-width: 1100px)" href="css/mobile.css">
     <link rel="shortcut icon" href="imagens/icon.png" type="image/x-icon">
     <title>João Costa Fotografia</title>
 </head>
 
-<body >
+<body>
     <nav>
         <div class="logo"><img id="logo" src="imagens/logo2.png" alt="logo"></div>
 
-        <div class="menus">
+        <div class="menus" id="menus">
             <ul>
-                <a href="#home">
+                <a id="home">
                     <li>Home</li>
                 </a>
-                <a href='#' onclick="window.scroll(0,1335)">
+                <a id="trabalhos">
                     <li>Trabalhos</li>
                 </a>
-                <a href="#premios">
+                <a id="conquistas">
                     <li>Conquistas</li>
                 </a>
-                <a href="#sobre">
+                <a id="sobre-nos">
                     <li>Sobre Nós</li>
                 </a>
                 <a href="#contato">
@@ -34,9 +34,21 @@
                 </a>
             </ul>
         </div>
+
+        <div class="mobile">
+            <div class="linha"></div>
+            <div class="linha"></div>
+            <div class="linha"></div>
+        </div>
     </nav>
 
-    <div class="home" id="home"></div>
+    <div class="home" id="home">
+        <svg xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 384 512">
+            <path
+                d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+        </svg>
+    </div>
 
     <div class="galeria" loading='lazy'>
         <div id="img1" class="foto"></div>
@@ -59,7 +71,7 @@
 
         <div class="container-galeria" id="galeria">
             <h3>GALERIA</h3>
-            <a href="#galeria">VER MAIS</a>
+            <a href="galeria.html">VER MAIS</a>
         </div>
     </div>
 
@@ -67,7 +79,7 @@
         <div class="img"></div>
 
         <div class="texto">
-            <h4>Quem<br>Somos</h4>
+            <h4>Quem Somos</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel, molestie
                 odio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus nisl est quis
                 nisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante nunc sed
@@ -85,49 +97,37 @@
         <div class="container-duvidas">
             <div class="duvida">
                 <h4>Vocês também fazem fotos protocolares e decoração?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="duvida-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum,
+                    commodo nisi vel,
                     molestie
                     odio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus nisl est
                     quis
                     nisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante nunc
-                    sed
-                    nibh. Cras in maximus felis. Integer molestie efficitur ligula sit amet molestie. Etiam vitae
-                    scelerisque erat. Vestibulum aliquam, nulla fringilla egestas fringilla, sem nibh lacinia sapien, id
-                    posuere tortor sapien in urna. Suspendisse rhoncus, lacus id commodo dignissim, dolor ipsum laoreet
-                    erat, in feugiat turpis eros quis sem. Donec enim leo, tincidunt quis orci eu, efficitur cursus
-                    enim.
+                    sed.
                 </p>
             </div>
 
             <div class="duvida">
                 <h4>Vocês fotografam casamentos fora de SP?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="duvida-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum,
+                    commodo nisi vel,
                     molestie
                     odio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus nisl est
                     quis
                     nisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante nunc
-                    sed
-                    nibh. Cras in maximus felis. Integer molestie efficitur ligula sit amet molestie. Etiam vitae
-                    scelerisque erat. Vestibulum aliquam, nulla fringilla egestas fringilla, sem nibh lacinia sapien, id
-                    posuere tortor sapien in urna. Suspendisse rhoncus, lacus id commodo dignissim, dolor ipsum laoreet
-                    erat, in feugiat turpis eros quis sem. Donec enim leo, tincidunt quis orci eu, efficitur cursus
-                    enim.
+                    sed.
                 </p>
             </div>
 
             <div class="duvida">
                 <h4>Quantas fotos são entregues? Elas são tratadas?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="duvida-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum,
+                    commodo nisi vel,
                     molestie
                     odio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus nisl est
                     quis
                     nisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante nunc
-                    sed
-                    nibh. Cras in maximus felis. Integer molestie efficitur ligula sit amet molestie. Etiam vitae
-                    scelerisque erat. Vestibulum aliquam, nulla fringilla egestas fringilla, sem nibh lacinia sapien, id
-                    posuere tortor sapien in urna. Suspendisse rhoncus, lacus id commodo dignissim, dolor ipsum laoreet
-                    erat, in feugiat turpis eros quis sem. Donec enim leo, tincidunt quis orci eu, efficitur cursus
-                    enim.
+                    sed.
                 </p>
             </div>
         </div>
@@ -145,7 +145,8 @@
                     <p class="nome">Renato <br> Almeida</p>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="relato">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo
+                    nisi vel,
                     molestieodio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus
                     nisl este
                     quisnisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante
@@ -160,7 +161,8 @@
                     <p class="nome">Renato <br> Almeida</p>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="relato">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo
+                    nisi vel,
                     molestieodio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus
                     nisl este
                     quisnisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante
@@ -175,7 +177,8 @@
                     <p class="nome">Renato <br> Almeida</p>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="relato">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo
+                    nisi vel,
                     molestieodio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus
                     nisl este
                     quisnisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante
@@ -190,7 +193,8 @@
                     <p class="nome">Renato <br> Almeida</p>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="relato">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo
+                    nisi vel,
                     molestieodio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus
                     nisl este
                     quisnisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante
@@ -205,7 +209,8 @@
                     <p class="nome">Renato <br> Almeida</p>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="relato">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo
+                    nisi vel,
                     molestieodio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus
                     nisl este
                     quisnisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante
@@ -220,7 +225,8 @@
                     <p class="nome">Renato <br> Almeida</p>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo nisi vel,
+                <p class="relato">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed risus rutrum, commodo
+                    nisi vel,
                     molestieodio. Vestibulum luctus, risus vel dictum commodo, orci velit fringilla felis, quis luctus
                     nisl este
                     quisnisi. Donec accumsan, quam ac lobortis sagittis, risus lectus commodo turpis, id elementum ante
@@ -263,7 +269,7 @@
 
         <div class="infos">
             <div class="info1 container">
-                <h4>Entrevistas exclusivas com refêrencias <br> do mundo da fotografia internacional</h4>
+                <h4>1Entrevistas exclusivas com refêrencias <br> do mundo da fotografia internacional</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ornare augue nunc, et auctor
                     orci
                     elementum eget. Praesent malesuada eu libero in accumsan. Morbi aliquam nunc eros, eget rhoncus
@@ -274,48 +280,39 @@
                     vestibulum enim cursus vulputate facilisis. Phasellus sed ligula vel enim porttitor sodales.
                     Nullam
                     rutrum egestas nisi. Ut feugiat, tellus quis interdum porttitor, purus justo luctus est, in
-                    sollicitudin tortor ante non risus. Nunc metus augue, consequat in efficitur in, venenatis ac
-                    nisl.
-                    Integer posuere pretium metus, eu pharetra urna tempor non. Mauris vel pretium felis. Fusce
-                    vitae ex
-                    est. Phasellus condimentum dolor dui, vel efficitur felis venenatis sed.</p>
+                    sollicitudin.</p>
             </div>
 
             <div class="info2 container">
-                <h4>Aulas práticas</h4>
+                <h4>2Aulas práticas</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ornare augue nunc, et auctor
                     orci
                     elementum eget. Praesent malesuada eu libero in accumsan. Morbi aliquam nunc eros, eget rhoncus
                     massa feugiat in. Proin enim libero, tempor placerat suscipit at, consequat eu erat. Integer
                     magna
                     odio, egestas posuere luctus id, sodales ac urna. Nullam interdum velit eu enim consectetur, ut
-                    euismod nunc consequat. Ut pharetra egestas enim, ac pellentesque odio facilisis quis. Aenean
-                    vestibulum enim cursus vulputate facilisis. Phasellus sed ligula vel enim porttitor sodales.
-                    Nullam.</p>
+                    euismod.</p>
             </div>
 
             <div class="info3 container">
-                <h4>Aulas teóricas</h4>
+                <h4>3Aulas teóricas</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ornare augue nunc, et auctor
                     orci
                     elementum eget. Praesent malesuada eu libero in accumsan. Morbi aliquam nunc eros, eget rhoncus
                     massa feugiat in. Proin enim libero, tempor placerat suscipit at, consequat eu erat. Integer
                     magna
                     odio, egestas posuere luctus id, sodales ac urna. Nullam interdum velit eu enim consectetur, ut
-                    euismod nunc consequat. Ut pharetra egestas enim, ac pellentesque odio facilisis quis. Aenean
-                    vestibulum enim cursus vulputate facilisis. Phasellus sed ligula vel enim porttitor sodales.
-                    Nullam.</p>
+                    euismod nunc consequat</p>
             </div>
 
             <div class="info4 container">
-                <h4>Mentoria <br> em grupo</h4>
+                <h4>4Mentoria em grupo</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ornare augue nunc, et auctor orci
                     elementum eget. Praesent malesuada eu libero in accumsan. Morbi aliquam nunc eros, eget rhoncus
                     massa feugiat in. Proin enim libero, tempor placerat suscipit at, consequat eu erat. Integer magna
                     odio, egestas posuere luctus id, sodales ac urna. Nullam interdum velit eu enim consectetur, ut
                     euismod nunc consequat. Ut pharetra egestas enim, ac pellentesque odio facilisis quis. Aenean
-                    vestibulum enim cursus vulputate facilisis. Phasellus sed ligula vel enim porttitor sodales. Nullam
-                    rutrum egestas nisi. </p>
+                    vestibulum. </p>
             </div>
         </div>
         <div class="recado">
@@ -329,34 +326,40 @@
     <div class="rodape">
         <div class="esquerda">
             <div class="foto_time"></div>
+
             <div class="descricao">
                 <h4>NOSSO TIME</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium iste ipsam, dolores
+                <p class="descricao-legenda">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium
+                    iste ipsam, dolores
                     consequatur dolor, accusamus deserunt asperiores repellendus ad architecto sint perferendis et ab
                     commodi dignissimos, blanditiis magnam perspiciatis Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Explicabo vero voluptatem repudiandae et qui. Distinctio aut aspernatur dicta illo
-                    natus dolorem ab nihil beatae maxime, eum officia magni nobis consectetur</p>
+                    adipisicing elit. </p>
             </div>
         </div>
 
         <div class="direita">
             <h4>Contato:</h4>
-            <a href="tel:(99) 99999-9999">(99) 99999-9999</a>
-            <a href="mailto:email@gmail.com">email@gmail.com</a>
+
+            <a href="tel:(99) 99999-9999" class="telefone">(99) 99999-9999</a>
+            <a href="mailto:email@gmail.com" class="email">email@gmail.com</a>
 
             <div class="socialmedia">
                 <p>Nossas <br> redes sociais</p>
+
                 <a href="https://facebook.com"></a><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"
                     class="facebook icon">
                     <path
                         d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" />
-                </svg></a>
+                </svg>
+
                 <a href="https://instagram.com"></a><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
                     class="instagram icon">
                     <path
                         d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
-                </svg></a>
+                </svg>
+
             </div>
+
         </div>
     </div>
 
