--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
 
     <div class="home" id="home">
-        <svg xmlns="http://www.w3.org/2000/svg"
+        <svg xmlns="http://www.w3.org/2000/svg" class="arrow"
             viewBox="0 0 384 512">
             <path
                 d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
@@ -269,7 +269,7 @@
 
         <div class="infos">
             <div class="info1 container">
-                <h4>1Entrevistas exclusivas com refêrencias <br> do mundo da fotografia internacional</h4>
+                <h4>1Entrevistas exclusivas com refêrencias do mundo da fotografia internacional</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ornare augue nunc, et auctor
                     orci
                     elementum eget. Praesent malesuada eu libero in accumsan. Morbi aliquam nunc eros, eget rhoncus
