--- a/galeria.html
+++ b/galeria.html
@@ -10,41 +10,103 @@
     <link rel="shortcut icon" href="imagens/icon.png" type="image/x-icon">
     <title>Galeria</title>
 </head>
+
 <body>
     <nav>
         <div class="logo"><a href="index.html"><img id="logo" src="imagens/logo2.png" alt="logo"></a></div>
     </nav>
 
     <div id="galeria">
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
-        <div class="foto"><h3>Titulo</h3><p>subtitulo</p></div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
+        <div class="foto">
+            <h3>Titulo</h3>
+            <p>subtitulo</p>
+        </div>
     </div>
 
     <div id="fullscreen">
-        <div id="fotografia"></div>
-        <p id="fechar">X</p>
+        <div id="fotografia">
+            <p id="fechar">X</p>
+        </div>
     </div>
 
     <div class="rodape">
-    
+
         <div class="esquerda">
             <div class="foto_time"></div>
 
@@ -86,4 +148,5 @@
 
     <script src="js/galeria.js"></script>
 </body>
+
 </html>
