--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 <a id="home">
                     <li>Home</li>
                 </a>
-                <a id="trabalhos">
+                <a id="trabalhos" >
                     <li>Trabalhos</li>
                 </a>
-                <a id="conquistas">
+                <a id="conquistas" >
                     <li>Conquistas</li>
                 </a>
-                <a id="sobre-nos">
+                <a id="sobre-nos" >
                     <li>Sobre Nós</li>
                 </a>
-                <a href="#contato">
+                <a id="contato" >
                     <li>Contato</li>
                 </a>
             </ul>
@@ -50,7 +50,7 @@
         </svg>
     </div>
 
-    <div class="galeria" loading='lazy'>
+    <div class="galeria" loading='lazy' id="galeria">
         <div id="img1" class="foto"></div>
 
         <div id="img2" class="foto"></div>
@@ -69,7 +69,7 @@
 
         <div id="img9" class="foto"></div>
 
-        <div class="container-galeria" id="galeria">
+        <div class="container-galeria">
             <h3>GALERIA</h3>
             <a href="galeria.html">VER MAIS</a>
         </div>
@@ -361,10 +361,6 @@
             </div>
 
         </div>
-    </div>
-
-    <div class="scroll">
-        <p id="jsteste"></p>
     </div>
 
     <script src="js/main.js"></script>
